--- a/apps/loft/templates/loft/includes/entry_object_short.html
+++ b/apps/loft/templates/loft/includes/entry_object_short.html
@@ -3,6 +3,6 @@
     <div class="post">
         {{ object.lead_in }}
     </div>
-    <p class="post-meta">{{ object.created|date:"jS F Y" }} &bull; {{ object.author }}</p>
+    <p class="post-meta">{{ object.created|date:"jS F Y" }} &bull; {{ object.author.first_name }}</p>
     <div class="clearingDiv"></div>
 </div>
