--- a/apps/guests/templates/guest_rsvp.html
+++ b/apps/guests/templates/guest_rsvp.html
@@ -2,6 +2,8 @@
 
 {% load form_helpers %}
 
+{% block page_title %}{{ block.super }} &bull; RSVP{% endblock %}
+
 {% block page_class %}{% endblock %}
 
 {% block primary %}
