--- a/apps/loft/templates/loft/base.html
+++ b/apps/loft/templates/loft/base.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
+{% block page_title %}{{ block.super }} &bull; News{% endblock %}
+
 {% block footer %}
     {{ block.super }} &bull; 
-    <a href="{% url blog_rss_feed %}">RSS</a> &bull; 
+    <a href="{% url blog_rss_feed %}">RSS</a>  
     <a href="{% url blog_atom_feed %}">Atom</a>
 {% endblock %}
