--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -2,6 +2,10 @@
 
 {% load markup %}
 
+{% block page_title %}{{ block.super }} &bull; {{ flatpage.title }}{% endblock %}
+
+
+
 {% block page_class %}{% endblock %}
 
 {% block primary %}
