--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
     </div>
     <div id="secondary">
         <div id="logo">
-            <h1>East meets West</h1>
+            <p>East meets West</p>
             <span class="tagline">Tim and Mai-Linh get it on</span>
         </div>
         <ul id="nav">
