Done fixes list apart from images

--- a/apps/loft/templates/loft/base.html
+++ b/apps/loft/templates/loft/base.html
@@ -4,6 +4,6 @@
 
 {% block footer %}
     {{ block.super }} &bull; 
-    <a href="{% url blog_rss_feed %}">RSS</a>  
+    <a href="{% url blog_rss_feed %}">RSS</a> &bull; 
     <a href="{% url blog_atom_feed %}">Atom</a>
 {% endblock %}
