Updated title tags

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,11 +30,11 @@
 {% block extra_js %}{% endblock %}
  
 <!-- Page Title --> 
-<title>{% block page_title %}East Meets West{% endblock %}</title>
+<title>{% block page_title %}Tim and Mai-Linh{% endblock %}</title>
  
 </head> 
 <body class="{% block page_class %}home{% endblock %}">
-<!--[if IE]><p style="color: red; text-align: center; margin-top: 10px">You're using Internet Explorer. This website uses technologies that Internet Explorer does not support but pretty much every other browser does support. Do yourself and the Internet a favour and install a better browser.</p><![endif]--> 
+<!--[if lt IE 7]><p style="color: red; text-align: center; margin-top: 10px">I'm a web developer and we love to push the boundaries of what's possible on the Internet. You're using an outdated version of Internet Explorer, a browser that gives you degraded browsing experience. You know what to do: <a href="http://www.google.com/chrome/intl/en/landing_chrome_mac.html?hl=en" title="Google Chrome - Get a fast new browser. For PC, Mac, and Linux">Get Chrome</a></p><![endif]--> 
 <div id="container"> 
     <div id="primary">
         {% block primary %}{% endblock %}
