--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" charset="utf-8" src="{{ MEDIA_URL }}js/jquery.nivo.slider.pack.js"></script>
     <script type="text/javascript" charset="utf-8">
         $(window).load(function() {
-            $('#slideshow').nivoSlider({
+            $('#slideshow').show().nivoSlider({
                 effect:'fade', //Specify sets like: 'fold,fade,sliceDown'
                 slices:15,
                 animSpeed:800, //Slide transition speed
