Template changes for the RSVP form

--- a/apps/guests/templates/guest_register.html
+++ b/apps/guests/templates/guest_register.html
@@ -9,6 +9,7 @@
 {% block primary %}
     <h1>RSVP</h1>
     <p>In order to help us organise a great wedding ceremony and reception for everyone, we'd appreciate it if you'd take a minute to RSVP using this form.</p>
+	<p><strong>Don't worry if you can't make it!</strong> It's a long way and we understand. You can write us a quick note in our guestbook afterwards.</p>
     <form id="rsvp-form" action="" method="post" accept-charset="utf-8" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="section">
