--- a/apps/guests/templates/guest_thanks.html
+++ b/apps/guests/templates/guest_thanks.html
@@ -8,7 +8,7 @@
     <h1>Guestbook</h1>
     {% if not guest.attending_ceremony and not guest.attending_reception %}
           <p>Your RSVP was successfully received. Sorry to hear you're not able to attend. We understand completely!</p>
-          <p>We'd really like it if you could sign our guest book though. Please!</p>
+		  <p>We'd really like it if you could sign our <a href="{% url guestbook_guestbook %}">guest book</a> though. Please!</p>
     {% else %}
           <p>Your RSVP was successfully received. We can't wait to see you there!</p>
     {% endif %}
